# cota-registry-aggregator

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  aggregator.toml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
migrations/2022-02-08-094146_init_schema/: down.sql  up.sql
migrations/2022-09-09_add_ccid_to_registry/: up.sql
rpc/: Cargo.toml
rpc/src/: api.rs  config.rs  db.rs  error.rs  lib.rs  smt.rs  utils.rs
src/: api.rs  db.rs  error.rs  main.rs  schema.rs  smt.rs  utils.rs
src/indexer/: index.rs
src/smt/: entry.rs  mod.rs  smt.rs
src/smt/db/: cota_db.rs  db.rs  transaction.rs
src/smt/store/: serde.rs  smt_store.rs
src/smt/transaction/: store_transaction.rs
