[package]
name = "cota-registry-aggregator"
version = "0.5.0"
edition = "2018"

[dependencies]
jsonrpc-http-server = "18.0.0"
env_logger = "0.9"
log = {version = "0.4", features = ["release_max_level_debug", "max_level_debug"]}
rocksdb = { package = "ckb-rocksdb", version = "=0.18.3", features = ["snappy"] }
hex = "0.4"
failure = "0.1.8"
lazy_static = "1.4"
crc = "3.0.0"
chrono = "0.4"
diesel = { version = "1.4.8", features = ["mysql", "r2d2", "numeric"] }
dotenv = "0.15.0"
molecule = "0.7.2"
serde = { version = "1.0", features = [ "derive" ] }
sparse-merkle-tree = "0.5.3"
ckb-types = "=0.104.0"
ckb-jsonrpc-types = ">=0.104.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
cota-smt = {package = "cota-smt", git = "https://github.com/nervina-labs/cota-smt", tag = "0.1.0"}